force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/IFv2_PredefinedWorkflowFields__mdt.object-meta.xml
<CustomObject>
    <description>To map the predefined IFv2_Workflow__c custom settings fields with the IFv2_Request__c object in InsightFlow application version 2.0</description>
    <label>Predefined Mapping</label>
    <pluralLabel>Predefined Mappings</pluralLabel>
</CustomObject>