force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/AllowOverride__c.field-meta.xml
<CustomField>
    <fullName>AllowOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>