force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Metadata Record</description>
    <inlineHelpText>Description of Metadata Record</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>