force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/IsConditional__c.field-meta.xml
<CustomField>
    <fullName>IsConditional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check if the record is related to any Condition</inlineHelpText>
    <label>Conditional Mapping</label>
    <type>Checkbox</type>
</CustomField>