force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/IsIndirectMapping__c.field-meta.xml
<CustomField>
    <fullName>IsIndirectMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked - In the Value field enter the field API name of the field whose value needs to be populated in the Request field API
If unchecked - In the Value field enter the exact value to be populated in the Request field API</inlineHelpText>
    <label>Indirect Mapping</label>
    <type>Checkbox</type>
</CustomField>