force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/MappingLogic__c.field-meta.xml
<CustomField>
    <fullName>MappingLogic__c</fullName>
    <inlineHelpText>ALL - all conditions need to be satisfied
ANY - any one of the conditions need to be satisfied</inlineHelpText>
    <label>Mapping Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>