force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/RequestFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>RequestFieldAPI__c</fullName>
    <description>IFv2_Request__c object field Api</description>
    <inlineHelpText>Please enter the API name of the IFv2_Request__c object field to be mapped</inlineHelpText>
    <label>Request Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>