force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>Please enter the value to be populated.
In case of Approver field please enter the user ID</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>