force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <inlineHelpText>Please select the workflow to which the Predefined Mapping is related to</inlineHelpText>
    <label>Workflow</label>
    <referenceTo>IFv2_Workflows__mdt</referenceTo>
    <relationshipLabel>Predefined Mappings</relationshipLabel>
    <relationshipName>PredefinedMappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>