force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/fields/WorkflowField__c.field-meta.xml
<CustomField>
    <fullName>WorkflowField__c</fullName>
    <description>IFv2_Workflow__c custom settings field apis</description>
    <inlineHelpText>Please enter the API name of the IFv2_Workflow__c custom settings field to be mapped</inlineHelpText>
    <label>Workflow Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>