force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/listViews/AllMapping.listView-meta.xml
<ListView>
    <fullName>AllMapping</fullName>
    <columns>MasterLabel</columns>
    <columns>WorkflowName__c</columns>
    <columns>DeveloperName</columns>
    <columns>IsConditional__c</columns>
    <columns>MappingLogic__c</columns>
    <columns>RequestFieldAPI__c</columns>
    <columns>WorkflowField__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mapping</label>
    <language>en_US</language>
</ListView>