force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/listViews/AllPredefined.listView-meta.xml
<ListView>
    <fullName>AllPredefined</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Workflow__c</columns>
    <columns>Value__c</columns>
    <columns>RequestFieldAPI__c</columns>
    <columns>WorkflowName__c</columns>
    <columns>IsConditional__c</columns>
    <columns>IsIndirectMapping__c</columns>
    <columns>MappingLogic__c</columns>
    <columns>WorkflowField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkflowName__c</field>
        <operation>contains</operation>
        <value>journal</value>
    </filters>
    <label>All Predefined</label>
    <language>en_US</language>
</ListView>