force-app/main/default/objects/IFv2_PredefinedWorkflowFields__mdt/listViews/Indirect_Purchasing_Master.listView-meta.xml
<ListView>
    <fullName>Indirect_Purchasing_Master</fullName>
    <columns>MasterLabel</columns>
    <columns>Workflow__c</columns>
    <columns>WorkflowName__c</columns>
    <columns>Status__c</columns>
    <columns>MappingLogic__c</columns>
    <columns>RequestFieldAPI__c</columns>
    <columns>Value__c</columns>
    <columns>WorkflowField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkflowName__c</field>
        <operation>startsWith</operation>
        <value>Indirect</value>
    </filters>
    <label>Indirect Purchasing Master</label>
    <language>en_US</language>
</ListView>